# pay-viewer

./: .derived  .flake8  .gitignore  .isort.cfg  .project  .pydevproject  Makefile  Pipfile  README.rst  delme.py  main.py  mypy.ini  output.xlsx  pylint.ini  pylintrc  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
_scripts/: collisions.py  qwtdemo.py
demo/: callout.py  collisions.py  demoqtgraphs.py  ftv.py  main.py  paystats.py  scroll.py  stacked.py  ticketcods.py  view.qml
inttests/: test_pdf2xls.py
inttests/reader/: test_pdfreader.py
inttests/writer/: test_xlswriter.py
pdf2xls/: __main__.py  automation.py  chartview.py  cli.py  constants.py  dates.py  freezetableview.py  loader.py  mainui.py  mainui.ui  model.py  modelgui.py  pdf2xls.py  removejsons.py  settings.py  tabula-template.json  viewmodel.py
pdf2xls/chartslider/: chartslider.py
pdf2xls/chartwidget/: chart.py  charthover.py  chartslider.py  chartview.py  chartwidget.py  common.py  datetimeaxis.py
pdf2xls/model/: db.py  info.py  keys.py
pdf2xls/mtime/: abcmtimerereader.py  mtimereader.py
pdf2xls/qwtchartwidget/: plot.py  qwtchartwidget.py
pdf2xls/reader/: abcreader.py  cachedreader.py  historyreader.py  pdfreader.py
pdf2xls/resources/: charthoverui.ui  chartslider.qml  freeze_table_view.ui  mainui.ui  settingsui.ui  tabula-template.json
pdf2xls/writer/: abcwriter.py  csvwriter.py  historywriter.py  xlswriter.py
removejsons/: __main__.py
resources/stubs/: PyPDF2.pyi
src/: __main__.py  automation.py  constants.py  dates.py  freezetableview.py  loader.py  mainui.py  model.py  modelgui.py  settings.py  viewmodel.py
src/chartslider/: chartslider.py
src/chartwidget/: chart.py  charthover.py  chartview.py  chartwidget.py  datetimeaxis.py
src/it/python/itpdf2xls/: __init__.py  test_pdf2xls.py
src/it/python/itpdf2xls/reader/: test_pdfreader.py
src/it/python/itpdf2xls/writer/: test_xlswriter.py
src/it/python/pdf2xls/: __init__.py  test_pdf2xls.py
src/main/python/: main.py  removejsons.py
src/main/python/pdf2xls/: model.py  pdf2xls.py
src/main/python/pdf2xls/model/: __init__.py  db.py  info.py  keys.py
src/main/python/pdf2xls/mtime/: abcmtimerereader.py  mtimereader.py
src/main/python/pdf2xls/reader/: __init__.py  abcreader.py  cachedreader.py  historyreader.py  pdfreader.py
src/main/python/pdf2xls/writer/: __init__.py  abcwriter.py  historywriter.py  xlswriter.py
src/main/resources/: tabula-template.json
src/main/resources/outxls/: testWriteOneColumn.xlsx  testWriteOneRow.xlsx  testWriteZeroRows.xlsx
src/payviewer/: automation.py  constants.py  freezetableview.py  loader.py  mainui.py  model.py  modelgui.py  pdfviewer.py  removejsons.py  settings.py  viewmodel.py
src/payviewer/chartslider/: chartslider.py
src/payviewer/chartwidget/: chart.py  charthover.py  chartview.py  chartwidget.py  datetimeaxis.py
src/payviewer/qwtchartwidget/: plot.py  qwtchartwidget.py
src/payviewer/reader/: abcreader.py  historyreader.py  pdfreader.py
src/payviewer/resources/: mainui.ui
src/payviewer/writer/: abcwriter.py  csvwriter.py  historywriter.py  xlswriter.py
src/qwtchartwidget/: plot.py  qwtchartwidget.py
src/reader/: abcreader.py  historyreader.py  pdfreader.py
src/test/python/pdf2xls/writer/: test_historywriter.py  test_xlswriter.py
src/test/python/test_pdf2xls/model/: test_db.py
src/test/python/testpdf2xls/: __init__.py  test_pdf2xls.py
src/test/python/testpdf2xls/model/: test_db.py
src/test/python/testpdf2xls/reader/: test_cachedreader.py  test_historyreader.py
src/test/python/testpdf2xls/writer/: test_historywriter.py  test_xlswriter.py
src/writer/: abcwriter.py  csvwriter.py  historywriter.py  xlswriter.py
stubs/: PyPDF2.pyi  mockito.pyi  openpyxl.pyi  pandas.pyi  setuptools.pyi  tabula.pyi
stubs/openpyxl/: __init__.pyi  cell.pyi
stubs/openpyxl/utils/: cell.pyi
stubs/openpyxl/workbook/: workbook.pyi
stubs/openpyxl/worksheet/: dimensions.pyi  worksheet.pyi
stubs/pdfminer3/: high_level.pyi  layout.pyi
stubs/qwt/: __init__.pyi  graphic.pyi  interval.pyi  legend.pyi  plot.pyi  plot_canvas.pyi  plot_curve.pyi  plot_grid.pyi  plot_marker.pyi  plot_series.pyi  scale_div.pyi  scale_draw.pyi  scale_map.pyi  symbol.pyi  text.pyi
tests/: __init__.py  test_dsu.py  test_pdf2xls.py  testsupport.py
tests/model/: test_db.py
tests/pdf2xls/: __init__.py  test_pdf2xls.py
tests/pdf2xls/qwtchartwidget/: test_plot.py
tests/pdf2xls/reader/: test_historyreader.py  test_pdfreader.py
tests/pdf2xls/writer/: test_csvwriter.py  test_historywriter.py  test_xlswriter.py  test_xlswriter_2.py
tests/reader/: test_cachedreader.py  test_historyreader.py  test_pdfreader.py
tests/resources/outxls/: testWriteOneColumn.xlsx  testWriteOneRow.xlsx  testWriteZeroRows.xlsx
tests/test_qwtchartwidget/: test_plot.py
tests/test_reader/: test_historyreader.py  test_pdfreader.py
tests/test_writer/: test_csvwriter.py  test_historywriter.py  test_xlswriter.py  test_xlswriter_2.py
tests/writer/: test_xlswriter.py
viewer/: __main__.py  chartview.py  model.py  ui.py  viewer.ui
