[build-system]
build-backend = "pdm.backend"
requires = [ "pdm-backend" ]

[project]
name = "zeed-pay-viewer"
version = "0.0.0"
description = "python+qt based pay viewer"
license = { file = "LICENSE" }
authors = [
    { name = "ZeeD", email = "vito.detullio@gmail.com" },
]
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jdk4py>=21.0.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pyside6>=6.8.2",
    "pythonqwt>=0.12.5",
    "selenium>=4.22",
    "tabula-py[jpype]>=2.9.3",
    "zeed-guilib>=0.0.4",
]
optional-dependencies.dev = [
    "coverage>=7.6.10",
    "mypy>=1.10.1",
    "pandas-stubs>=2.2.2.240603",
    "pyproject-fmt>=2.5.1",
    "pytest>=8.3.2",
    "ruff>=0.5",
]
urls.Homepage = "https://github.com/ZeeD/pay-viewer"
urls.Repository = "https://github.com/ZeeD/pay-viewer.git"
gui-scripts.pay-viewer = "payviewer.mainui:main"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
_.env = { PYTHONPATH = "src:tests:demo:stubs" }
lint = { composite = [
    "pyproject-fmt pyproject.toml",
    "ruff format {args:.}",
    "ruff check {args:.}",
    "mypy {args:.}",
], keep_going = true }
start = "pay-viewer"
tests = { composite = [
    "coverage run -m unittest discover --verbose --locals --failfast --catch --start-directory tests {args}",
    "coverage report",
    "coverage erase",
] }

[tool.ruff]
line-length = 80
src = [ "demo", "src", "stubs", "tests" ]
fix = true
format.quote-style = "single"
format.skip-magic-trailing-comma = true
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
    "ANN1",   # disabled by me
    "COM812", # conflicts with formatter
    "D1",     # disabled by me
    "D203",   # incompatibility with D211
    "D213",   # incompatibility with D212
    "ISC001", # conflicts with formatter
    "PD",     # disabled by me
    "PT009",  # disabled by me
    "PT027",  # disabled by me
    "Q001",   # conflicts with formatter
    "Q002",   # conflicts with formatter
    "S603",   # incompatibility with S602
]
lint.extend-per-file-ignores."stubs/**/*.pyi" = [
    "FBT001",
    "FBT002",
    "N802",
    "N803",
    "N815",
    "PLR0913",
]
lint.flake8-annotations.allow-star-arg-any = true
lint.flake8-quotes.docstring-quotes = "single"
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-type-checking.quote-annotations = true
lint.isort.force-single-line = true

[tool.pyproject-fmt]
column_width = 80
indent = 4

[tool.coverage.run]
branch = true
source = [ "src", "tests" ]

[tool.coverage.report]
show_missing = true
sort = "Cover"
skip_empty = true

[tool.mypy]
mypy_path = [ "src", "tests", "demo", "stubs" ]
strict = true
warn_unused_configs = true
[[tool.mypy.overrides]]
module = [ "payviewer.automation", "payviewer.automation_cu" ]
disable_error_code = "no-untyped-call"
