[build-system]
build-backend = "pdm.backend"
requires = [ "pdm-backend" ]

[project]
name = "zeed-pay-viewer"
version = "0.0.0"
description = "python+qt based pay viewer"
license = { file = "LICENSE" }
authors = [
    { name = "ZeeD", email = "vito.detullio@gmail.com" },
]
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jdk4py>=21.0.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pyside6-essentials>=6.10.1",
    "pythonqwt>=0.15",
    "selenium>=4.22",
    "tabula-py[jpype]>=2.9.3",
    "zeed-guilib>=0.0.13",
]
urls.Homepage = "https://github.com/ZeeD/pay-viewer"
urls.Repository = "https://github.com/ZeeD/pay-viewer.git"
gui-scripts.pay-viewer = "payviewer.mainui:main"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "mypy>=1.10.1",
    "pandas-stubs>=2.2.2.240603",
    "pyproject-fmt>=2.5.1",
    "pytest>=8.3.2",
    "ruff>=0.5",
]

[tool.pdm]
distribution = true
plugins = [ "pdm-bump" ]
build.excludes = [ "tests" ]
scripts._.env = { PYTHONPATH = "src:tests:demo:stubs" }
scripts.lint = { composite = [
    "pyproject-fmt pyproject.toml",
    "ruff format {args:.}",
    "ruff check {args:.}",
    "mypy {args:.}",
], keep_going = true }
scripts.tests = { composite = [
    "coverage run -m unittest discover --verbose --locals --failfast --catch --start-directory tests {args}",
    "coverage report",
    "coverage erase",
] }
scripts.start = "pay-viewer"
scripts.bump_and_publish = { composite = [
    "pdm bump patch --commit --tag",
    "pdm publish",
    "git push",
] }
scripts.tabula = """
.venv/lib/python3.13/site-packages/jdk4py/java-runtime/bin/java
--add-opens java.base/java.util.zip=ALL-UNNAMED
--add-opens java.desktop/sun.java2d=ALL-UNNAMED
-Dfile.encoding=utf-8
-Xms256M -Xmx1024M
-Dtabula.openBrowser=true
-jar bin/tabula-win-1.2.1/tabula/tabula.jar
"""

[tool.ruff]
line-length = 80
src = [ "demo", "src", "stubs", "tests" ]
fix = true
format.quote-style = "single"
format.skip-magic-trailing-comma = true
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
    "ANN1",
    "COM812",
    "D1",
    "D203",
    "D213",
    "ISC001",
    "PD",
    "PT009",
    "PT027",
    "Q001",
    "Q002",
    "S603",
    "TD002",
    "TD003",
]
lint.extend-per-file-ignores."stubs/**/*.pyi" = [
    "FBT001",
    "FBT002",
    "N802",
    "N803",
    "N815",
    "PLR0913",
]
lint.flake8-annotations.allow-star-arg-any = true
lint.flake8-quotes.docstring-quotes = "single"
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-type-checking.quote-annotations = true
lint.isort.force-single-line = true

[tool.pyproject-fmt]
column_width = 80
indent = 4

[tool.coverage]
run.branch = true
run.source = [ "src", "tests" ]
report.show_missing = true
report.skip_empty = true
report.sort = "Cover"

[tool.mypy]
mypy_path = [ "src", "tests", "demo", "stubs" ]
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [ "payviewer.automation", "payviewer.automation_cu" ]
disable_error_code = "no-untyped-call"
